lessons minor fixes

--- a/lessons.html
+++ b/lessons.html
@@ -187,12 +187,16 @@
 </svg>
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
-                                <div class="btn-container">
+                                <div class="btn-container d-none d-lg-block">
                                     <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
                                         которого появляется признак, которого нет у родителей, или усиливается п...</p>
+                                </div>
+
+                                <div class="btn-container d-lg-none">
+                                    <button class="button btn-orange">Изучить</button>
                                 </div>
 
                             </div>
@@ -217,12 +221,16 @@
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                     <span class="red-label">урок перенесён</span>
                                 </div>
-                                <div class="btn-container">
+                                <div class="btn-container d-none d-lg-bloc">
                                     <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
                                         которого появляется признак, которого нет у родителей, или усиливается п...</p>
+                                </div>
+
+                                <div class="btn-container d-lg-none">
+                                    <button class="button btn-orange">Изучить</button>
                                 </div>
 
                             </div>
@@ -246,12 +254,16 @@
 </svg>
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
-                                <div class="btn-container">
+                                <div class="btn-container d-none d-lg-bloc">
                                     <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="description">
                                     <p>Взаимодействие генов — это совместное действие нескольких генов, в результате
                                         которого появляется признак, которого нет у родителей, или усиливается п...</p>
+                                </div>
+
+                                <div class="btn-container d-lg-none">
+                                    <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -281,11 +293,15 @@
 </svg>
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
-                                <div class="btn-container">
+                                <div class="btn-container d-none d-lg-bloc">
                                     <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="description">
                                     <p>Обычно половые хромосомы обозначают в генетических записях буквами X и Y. В этих хромосомах содержатся гены, определяющие синтез белков, которые регул...</p>
+                                </div>
+
+                                <div class="btn-container d-lg-none">
+                                    <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -315,11 +331,15 @@
 </svg>
 </span><span class="time">17:30</span><span class="secondary">МСК</span></span>
                                 </div>
-                                <div class="btn-container">
+                                <div class="btn-container d-none d-lg-block">
                                     <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="description">
                                     <p>К физическим факторам относят ионизирующее излучение, ультрафиолетовое излучение, повышенную температуру. Под их воздействием происходит повреждение м...</p>
+                                </div>
+
+                                <div class="btn-container d-lg-none">
+                                    <button class="button btn-orange">Изучить</button>
                                 </div>
                                 <div class="hw-status">
                                     <a href="#"><span class="icon"><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
