--- a/master-groups.html
+++ b/master-groups.html
@@ -215,7 +215,7 @@
                                     </p>
 
                                 </div>
-                                <div class="master-group-item__price">
+                                <div class="master-group-item__price plus">
                                     <span class="price">+1050 </span>
                                     <span>руб./мес.</span>
                                 </div>
@@ -231,7 +231,7 @@
                                     </p>
                                     <p class="secondary">Человек в группе <span class="label-gray">32</span>
                                     </p>
-                                    <button class="ml-auto button btn-orange-outline">Выбрать</button>
+                                    <button class="ml-lg-auto button btn-orange-outline">Выбрать</button>
                                 </div>
                             </div>
                             <div class="master-group-item">
@@ -253,7 +253,7 @@
                                     </p>
 
                                 </div>
-                                <div class="master-group-item__price">
+                                <div class="master-group-item__price plus">
                                     <span class="price">+1050 </span>
                                     <span>руб./мес.</span>
                                 </div>
@@ -269,7 +269,7 @@
                                     </p>
                                     <p class="secondary">Человек в группе <span class="label-gray">32</span>
                                     </p>
-                                    <button class="ml-auto button btn-orange-outline">Выбрать</button>
+                                    <button class="ml-lg-auto button btn-orange-outline">Выбрать</button>
 
                                 </div>
                             </div>
@@ -292,7 +292,7 @@
                                     </p>
 
                                 </div>
-                                <div class="master-group-item__price">
+                                <div class="master-group-item__price plus">
                                     <span class="price">+1050 </span>
                                     <span>руб./мес.</span>
                                 </div>
@@ -308,7 +308,7 @@
                                     </p>
                                     <p class="secondary">Человек в группе <span class="label-gray">32</span>
                                     </p>
-                                    <button class="ml-auto button btn-orange-outline">Выбрать</button>
+                                    <button class="ml-lg-auto button btn-orange-outline">Выбрать</button>
 
                                 </div>
                             </div>
@@ -331,7 +331,7 @@
                                     </p>
 
                                 </div>
-                                <div class="master-group-item__price">
+                                <div class="master-group-item__price plus">
                                     <span class="price">+1050 </span>
                                     <span>руб./мес.</span>
                                 </div>
@@ -347,7 +347,7 @@
                                     </p>
                                     <p class="secondary">Человек в группе <span class="label-gray">32</span>
                                     </p>
-                                    <button class="ml-auto button btn-orange-outline">Выбрать</button>
+                                    <button class="ml-lg-auto button btn-orange-outline">Выбрать</button>
 
                                 </div>
                             </div>
