--- a/my-master-groups.html
+++ b/my-master-groups.html
@@ -155,6 +155,10 @@
                             <h1>Мои мастер-группы</h1>
                             <div class="master-group-item">
                                 <div class="master-group-item__img">
+                                    <div class="floating-info">
+                                        <p class="name">Клим Корнеевец</p>
+                                        <p class="teachs">преподаватель химии</p>
+                                    </div>
                                     <img src="./assets/avatar.png" class="img-fluid">
                                 </div>
                                 <div class="master-group-item__text">
@@ -178,6 +182,10 @@
                             </div>
                             <div class="master-group-item">
                                 <div class="master-group-item__img">
+                                    <div class="floating-info">
+                                        <p class="name">Клим Корнеевец</p>
+                                        <p class="teachs">преподаватель химии</p>
+                                    </div>
                                     <img src="./assets/avatar2.png" class="img-fluid">
 
                                 </div>
@@ -206,6 +214,12 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
+<script>
+    $('.master-group-item__img').on('click',function () {
+        var fi = $(this).find('.floating-info');
+        fi.toggle();
+    })
+</script>
 <script>
     $(function () {
         $('[data-toggle="popover-menu"]').popover({
