--- a/homework.html
+++ b/homework.html
@@ -216,43 +216,17 @@
                                     </p>
                                 </div>
                                 <div class="text-area">
-                                    <p>Ответ</p>
+                                    <p class="text-area__heading">Ответ</p>
                                     <textarea rows="5"></textarea>
                                 </div>
                                 <div class="attach-files">
-                                    <input type="file" multiple hidden>
-                                    <button class=" button btn-orange-outline">Прикрепить файл</button>
+                                    <input type="file" multiple="multiple" hidden files-input>
+                                    <button class=" button btn-orange-outline "
+                                            onclick="$(this).parent().find('input').click()">
+                                        Прикрепить файл
+                                    </button>
                                     <div class="attach-files-list">
-                                        <div class="item">
-                                            <button class="btn-icon">
-                                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 12.2943L8.64267 6.98892L13.9463 1.63742L12.2943 0L6.99183 5.35442L1.63917 0.0530833L0 1.69225L5.3585 7.0035L0.0530833 12.3608L1.69225 14L7.00758 8.638L12.3626 13.9463L14 12.2943Z"
-                                                          fill="#7C6F5A"/>
-                                                </svg>
-                                            </button>
-                                            name.jpg
-                                        </div>
-                                        <div class="item">
-                                            <button class="btn-icon">
-                                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 12.2943L8.64267 6.98892L13.9463 1.63742L12.2943 0L6.99183 5.35442L1.63917 0.0530833L0 1.69225L5.3585 7.0035L0.0530833 12.3608L1.69225 14L7.00758 8.638L12.3626 13.9463L14 12.2943Z"
-                                                          fill="#7C6F5A"/>
-                                                </svg>
-                                            </button>
-                                            name.jpg
-                                        </div>
-                                        <div class="item">
-                                            <button class="btn-icon">
-                                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 12.2943L8.64267 6.98892L13.9463 1.63742L12.2943 0L6.99183 5.35442L1.63917 0.0530833L0 1.69225L5.3585 7.0035L0.0530833 12.3608L1.69225 14L7.00758 8.638L12.3626 13.9463L14 12.2943Z"
-                                                          fill="#7C6F5A"/>
-                                                </svg>
-                                            </button>
-                                            name.jpg
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -263,8 +237,27 @@
                                     <p class="exercise-text">В чём состоит связь дыхания и фотосинтеза у растений?
                                     </p>
                                 </div>
-                                <div class="text-area">
-                                    <p>Ответ</p>
+                                <div class="text-area tip-container">
+                                    <div class="tip-block" tip-id="2">
+                                        <a href="#" class="close-tip" onclick="$(this).parent().toggle();">
+                                            <img src="./assets/svg/close.svg" alt="">
+                                        </a>
+                                        <h3 class="heading">Подсказка №<span class="num">3</span> <span class="total">всего 5</span>
+                                        </h3>
+                                        <p class="tip-text">Не следует, однако забывать, что консультация с широким активом в
+                                            значительной степени обуславливает создание систем массового участия. С
+                                            другой стороны сложившаяся структура организации играет важную роль в
+                                            формировании направлений прогрессивного развития. Таким образом постоянное
+                                            информационно-пропагандистское обеспечение нашей деятельности представляет
+                                            собой интересный эксперимент проверки форм развития.</p>
+                                        <div class="tip-tools">
+                                            <a href="#" class="add-tip">Взять новую подсказку</a>
+                                            <div class="dots">
+                                                <div class="dot-item active" text-num="1"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p class="text-area__heading">Ответ</p>
                                     <textarea rows="5"></textarea>
                                 </div>
                             </div>
@@ -305,6 +298,76 @@
             content: '<div class="popover-menu"><ul><li><a href="#">Профиль</a></li><li><a href="#">Выйти</a></li></ul> </div>'
         })
     })
+</script>
+<script>
+    $('[files-input]').on('change', function () {
+        var files = $(this).prop("files");
+        var names = $.map(files, function (val) {
+            return val.name;
+        });
+        var container = $(this).parent().find('.attach-files-list');
+        $(container).find('*').remove();
+
+        $.each(names, function (i, name) {
+            $(container).append('<div class="item">\n' +
+                '                                            <button class="btn-icon del-file" onclick="$(this).parent().remove()">\n' +
+                '                                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"\n' +
+                '                                                     xmlns="http://www.w3.org/2000/svg">\n' +
+                '                                                    <path d="M14 12.2943L8.64267 6.98892L13.9463 1.63742L12.2943 0L6.99183 5.35442L1.63917 0.0530833L0 1.69225L5.3585 7.0035L0.0530833 12.3608L1.69225 14L7.00758 8.638L12.3626 13.9463L14 12.2943Z"\n' +
+                '                                                          fill="#7C6F5A"/>\n' +
+                '                                                </svg>\n' +
+                '                                            </button>\n' +
+                '                                            <span class="name">' + name + '</span>\n' +
+                '                                        </div>');
+        });
+    })
+</script>
+<script>
+    $('.hint-link').on('click', function (e) {
+        e.preventDefault();
+        $(this).parent().parent().find('.tip-block').toggle()
+    });
+
+    var tip2 = {
+        current:1,
+        tips:['1 подсказка',
+        '2 подсказка',
+        '3 подсказка']
+    };
+
+    //TODO работа подсказки
+    // function addTip(dot,container){
+    //
+    //     $('[tip-id=2]').find('.num').text(tip2.current);
+    //     var newDot = '<div class="dot-item" text-num='+tip2.current+'></div>';
+    //     var container = $('[tip-id=2] .dots')
+    //     $(container).append(newDot);
+    //
+    //
+    //     $(container).find('.dot-item').each(function () {
+    //         $(this).removeClass('active');
+    //     });
+    //     $(container+ ' .dot-item:last').addClass('active');
+    //     var textId = $(dot).attr('text-num');
+    //     var tipId =$(dot).parent().parent().parent().attr('[tip-id]');
+    //     var tip = $(document).find('[tip-id=2]');
+    //     $(tip).find('.tip-text').text(tip2.tips[textId-1]);
+    // }
+    //
+    // $(document).ready(function () {
+    //
+    //
+    //     $('[tip-id=2]').find('.num').text(tip2.current);
+    //     $('[tip-id=2]').find('.total').text('всего ' + tip2.tips.length);
+    //     $('[tip-id=2]').find('.add-tip').on('click',function () {
+    //         tip2.current++;
+    //         addTip($(newDot),$(container));
+    //         if(tip2.current === tip2.tips.length){
+    //             $('[tip-id=2]').find('.add-tip').hide();
+    //         }
+    //     })
+    //
+    // })
 </script>
 </body>
 </html>
