--- a/teacher-personal-page.html
+++ b/teacher-personal-page.html
@@ -128,7 +128,8 @@
                     <div class="content">
                         <div class="teacher-info-change-container">
                             <div class="change-avatar-block">
-                                <img src="./assets/teacher1.png" alt="">
+                                <input type="file" id="avatarInput" hidden>
+                                <img id="avatarPreview" src="./assets/teacher1.png" alt="">
                                 <div class="overlay">
                                     <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M5 2H2V1H5V2ZM15.93 2L16.742 3.219C17.485 4.334 18.729 5 20.07 5H22V18H2V5H5.93C7.271 5 8.515 4.334 9.258 3.219L10.07 2H15.93ZM17 0H9L7.594 2.109C7.223 2.666 6.599 3 5.93 3H0V20H24V3H20.07C19.401 3 18.777 2.666 18.406 2.109L17 0ZM6 8C6 7.448 5.553 7 5 7C4.447 7 4 7.448 4 8C4 8.552 4.447 9 5 9C5.553 9 6 8.552 6 8ZM13 8C14.654 8 16 9.346 16 11C16 12.654 14.654 14 13 14C11.346 14 10 12.654 10 11C10 9.346 11.346 8 13 8ZM13 6C10.239 6 8 8.239 8 11C8 13.761 10.239 16 13 16C15.761 16 18 13.761 18 11C18 8.239 15.761 6 13 6Z" fill="white"/>
@@ -195,6 +196,27 @@
             content: '<div class="popover-menu"><ul><li><a href="#">Редактировать</a></li><li><a href="#">Удалить</a></li></ul> </div>'
         })
     })
+</script>
+<script>
+    $('.change-avatar-block .overlay').on('click',function () {
+        $('#avatarInput').click();
+    })
+    function readURL(input) {
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function(e) {
+                $('#avatarPreview').attr('src', e.target.result);
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#avatarInput").change(function() {
+        readURL(this);
+    });
 </script>
 </body>
 </html>
